fix possible IndexOutOfArray